// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as auto 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .emotion-0 {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    max-width: none;
    width: auto;
  }
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as bool 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .emotion-0 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as number 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .emotion-0 {
    -webkit-flex: 0 0 33.3333%;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly without responsive when smallest breakpoint 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly when fluid 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
  max-width: undefined;
}

@media (min-width: 576px) {
  .emotion-0 {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .emotion-0 {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .emotion-0 {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .emotion-0 {
    max-width: 1140px;
  }
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
  max-width: undefined;
}

@media (min-width: 576px) {
  .emotion-0 {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .emotion-0 {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .emotion-0 {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .emotion-0 {
    max-width: 1140px;
  }
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Row
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

<div
    class="sui-box emotion-0 emotion-1"
  >
    Sample Row
  </div>
</DocumentFragment>
`;
